Fix content font and spacing.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,9 +15,13 @@ header {
     background-color: #ffffff;
 }
 
-.normal-text {
+.normal-text,
+p {
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
     color: #777777;
+    text-align: left;
+    font-size: 20px;
+    line-height: 120%;
 }
 
 .name-tab {
@@ -25,7 +29,6 @@ header {
     line-height: 90px;
     width: 210px;
     float: left;
-
     background-color: #4aaaa5;
     width: 230px;
     float: left;
@@ -70,6 +73,7 @@ nav a {
     border-width: 1px;
     /* made this a little darker than specified (#dddddd) since my background is darker */
     border-color: #cccccc;
+    text-align: left;
 }
 .main-hr {
     border: none;
@@ -86,6 +90,8 @@ nav a {
 
 .profile-pic {
     float: left;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .sidebar {
@@ -110,10 +116,10 @@ nav a {
 }
 
 #sidebar-heading {
-    text-align: left;
     font-size: 26px;
     padding-bottom: 10px;
     color: #4aaaa5;
+    text-align: left;
 }
 .sidebar-img {
     float: left;
